--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,8 @@ knitr::opts_chunk$set(
 # rPackageTutorial
 
 <!-- badges: start -->
+[![Codecov test coverage](https://codecov.io/gh/Nico0825/rPackageTutorial/branch/main/graph/badge.svg)](https://app.codecov.io/gh/Nico0825/rPackageTutorial?branch=main)
+[![R-CMD-check](https://github.com/Nico0825/rPackageTutorial/workflows/R-CMD-check/badge.svg)](https://github.com/Nico0825/rPackageTutorial/actions)
 <!-- badges: end -->
 
 The goal of rPackageTutorial is to ...
