--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 [![R-CMD-check](https://github.com/Nico0825/rPackageTutorial/workflows/R-CMD-check/badge.svg)](https://github.com/Nico0825/rPackageTutorial/actions)
 <!-- badges: end -->
 
-The goal of rPackageTutorial is to ...
+The goal of rPackageTutorial is to achieve sum function.
 
 ## Installation
 
